Version 5.4.0 (TBD)
    Added Oxide variables for styling the select element and headings in dialog content #TINY-6070
    Added all `table` menu items to the UI registry, so they can be used by name in other menus #TINY-4866
    Added new `table` cut, copy and paste column editor commands and menu items #TINY-6006
    Added additional font related Oxide variables for secondary buttons allowing more specific styling. #TINY-6061
    Changed `mceInsertTable` command and `insertTable` API method to take optional header rows and columns arguments #TINY-6012
    Fixed table `Paste row after` and `Paste row before` menu items not disabled when nothing was available to paste #TINY-6006
    Fixed filters for screening commands from the undo stack to be properly case-insensitive #TINY-5946
    Fixed `fullscreen` plugin now removes all classes when the editor is closed #TINY-4048
    Fixed handling of mixed-case icon names by having the silver theme downcase them before icon retrieval #TINY-3854
    Fixed leading and trailing spaces lost when using `editor.selection.getContent({ format: 'text' })` #TINY-5986
    Fixed an issue where removing formatting in a table cell would cause Internet Explorer 11 to scroll to the end of the table #TINY-6049
Version 5.3.2 (2020-06-10)
    Fixed a regression introduced in 5.3.0, where `images_dataimg_filter` was no-longer called #TINY-6086
Version 5.3.1 (2020-05-27)
    Fixed the image upload error alert also incorrectly closing the image dialog #TINY-6020
    Fixed editor content scrolling incorrectly on focus in Firefox by reverting default content CSS html and body heights added in 5.3.0 #TINY-6019
Version 5.3.0 (2020-05-21)
    Added html and body height styles to the default oxide content CSS #TINY-5978
    Added `uploadUri` and `blobInfo` to the data returned by `editor.uploadImages()` #TINY-4579
    Added a new function to the `BlobCache` API to lookup a blob based on the base64 data and mime type #TINY-5988